--- a/php.html
+++ b/php.html
@@ -16,8 +16,8 @@
     <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
     <a href="starszaki.html">STARSZAKI</a>
     <a href="innestrony.html">INNE STRONY</a>
-    <a href="python.html">PYTHON</a>
     <b><a href="php.html">SBD & PBD</a></b>
+    <a href="python.html">PYTHON</a>
     <a href="zdjecia.html">ZDJĘCIA</a>
     <a href="inne.html">INNE PLIKI</a>
     <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
@@ -61,6 +61,7 @@
                 tableBody.appendChild(row);
             });
         });
+// Table appearance and operation inspired from Jan Kupczyk EE-09 repo
 </script>
 </body>
 </html>
