--- a/php.html
+++ b/php.html
@@ -10,6 +10,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 <link rel="manifest" href="favicon/site.webmanifest">
+<link rel="stylesheet" href="php-table.css">
 </head>
 <body class="">
     <div class="nav">
