add gallery-cointainer to center gallery on smaller devices

--- a/starszaki.html
+++ b/starszaki.html
@@ -25,6 +25,7 @@
     <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
 
+<div class="gallery-container">
  <div class="gallery">
     <a target="_blank" href="sp/230522/index.html">
     <img src="img/230522.webp" loading="lazy"></a>
@@ -253,5 +254,6 @@
     <p>12.04.22</p>
     <p><a href="zip/220412.zip" download>Pobierz</a></p></div>
 
+</div>
 </body>
 </html>
