--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
    <a href="text.txt" target="_blank">INFO</a>
    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
+<div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
  <!-- <div class="gallery">
@@ -176,5 +177,6 @@
     <p>05.09.23 - [PAI] Pierwsze kroki w JS</p>
     <p><a href="zip/230905.zip" download>Pobierz</a></p></div>    
 
+</div>
 </body>
 </html>
