--- a/innestrony.html
+++ b/innestrony.html
@@ -25,6 +25,7 @@
 <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
 
+<div class="gallery-container">
 
     <div class="gallery">
     <a target="_blank" href="innestrony/is04/index.html">
@@ -36,6 +37,7 @@
     <a target="_blank" href="innestrony/is05/index.html">
     <img src="img/is05.webp" loading="lazy"></a>
     <p>Formularz Html z Young Leosią</p>
+    <p>Formularz HTML z Young Leosią</p>
     <p><a href="zip/is05.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
@@ -310,5 +312,6 @@
 
 
 
+</div>
 </body>
 </html>
