--- a/python.html
+++ b/python.html
@@ -25,6 +25,7 @@
     <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
 </div>
 
+<div class="gallery-container">
     <div class="gallery">
     <a target="_blank" href="python/051022.py">
     <img src="python/051022.webp" loading="lazy"></a>
@@ -146,5 +147,6 @@
 
 
 
+</div>
 </body>
 </html>
