complete redesign of navbar

--- a/inne.html
+++ b/inne.html
@@ -12,19 +12,8 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
-    <div class="nav">
-    <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
-    <a href="starszaki.html">STARSZAKI</a>
-    <a href="innestrony.html">INNE STRONY</a>
-    <a href="php.html">SBD & PBD</a>
-    <a href="python.html">PYTHON</a>
-    <a href="zdjecia.html">ZDJĘCIA</a>
-    <b><a href="inne.html">INNE PLIKI</a></b>
-    <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
-    <a href="text.txt" target="_blank">INFO</a>
-    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
-</div>
-
+<script src="navbar.js"></script>
+<div class="gallery-container">
     <div class="gallery">
     <img src="img/m_obliczenia_pusty.webp" loading="lazy">
     <p>5 plików exel (informatyka)</p>
@@ -36,7 +25,7 @@
     <p><a href="zip/egzaminy2023.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
-    <a target="_blank" href="inne/ostatnie slowa.txt">
+    <a target="_blank" href="files/ostatnie_slowa.txt">
     <img src="img/ostatnie-slowa.webp" loading="lazy"></a>
     <p>Ostatnie słowa</p>
     <p>‎</p></div>
@@ -45,6 +34,6 @@
     <img src="img/inf02-23.webp" loading="lazy">
     <p>Arkusze INF.02 sesja czerwiec 2023</p>
     <p><a href="zip/inf02-23.zip" download>Pobierz</a></p></div>
-
+</div>
 </body>
 </html>
