--- a/innestrony.html
+++ b/innestrony.html
@@ -12,19 +12,7 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
-    <div class="nav">
-<a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
-<a href="starszaki.html">STARSZAKI</a>
-<b><a href="innestrony.html">INNE STRONY</a></b>
-<a href="php.html">SBD & PBD</a>
-<a href="python.html">PYTHON</a>
-<a href="zdjecia.html">ZDJĘCIA</a>
-<a href="inne.html">INNE PLIKI</a>
-<a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
-<a href="text.txt" target="_blank">INFO</a>
-<h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
-</div>
-
+<script src="navbar.js"></script>
 <div class="gallery-container">
 
     <div class="gallery">
@@ -36,7 +24,6 @@
     <div class="gallery">
     <a target="_blank" href="innestrony/is05/index.html">
     <img src="img/is05.webp" loading="lazy"></a>
-    <p>Formularz Html z Young Leosią</p>
     <p>Formularz HTML z Young Leosią</p>
     <p><a href="zip/is05.zip" download>Pobierz</a></p></div>
 
@@ -303,15 +290,6 @@
     <img src="img/is59.webp" loading="lazy"></a>
     <p>Animacja perełka</p>
     <p><a href="zip/is59.zip" download>Pobierz</a></p></div>
-
-
-
-
-
-
-
-
-
 </div>
 </body>
 </html>
