--- a/php.html
+++ b/php.html
@@ -12,20 +12,9 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 <link rel="stylesheet" href="php-table.css">
 </head>
-<body class="">
-    <div class="nav">
-    <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
-    <a href="starszaki.html">STARSZAKI</a>
-    <a href="innestrony.html">INNE STRONY</a>
-    <b><a href="php.html">SBD & PBD</a></b>
-    <a href="python.html">PYTHON</a>
-    <a href="zdjecia.html">ZDJĘCIA</a>
-    <a href="inne.html">INNE PLIKI</a>
-    <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
-    <a href="text.txt" target="_blank">INFO</a>
-    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
-</div>
-<div class="warning"><p>UWAGA! Funkcje PHP nie będą tu działać z powodu braku backendu na gh-pages</p></div>
+<body>
+<script src="navbar.js"></script>
+
 <div class="table-container">
     <table>
     <thead>
