--- a/index.html
+++ b/index.html
@@ -12,18 +12,7 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
-    <div class="nav">
-   <a href="https://285.works" target="_blank"><p class="text">𝕊CHOOL PROJECTS</p></a>
-   <a href="starszaki.html">STARSZAKI</a>
-   <a href="innestrony.html">INNE STRONY</a>
-   <a href="php.html">SBD & PBD</a>
-   <a href="python.html">PYTHON</a>
-   <a href="zdjecia.html">ZDJĘCIA</a>
-   <a href="inne.html">INNE PLIKI</a>
-   <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
-   <a href="text.txt" target="_blank">INFO</a>
-   <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
-</div>
+<script src="navbar.js"></script>
 <div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
