--- a/python.html
+++ b/python.html
@@ -12,19 +12,7 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
-    <div class="nav">
-    <a href="index.html"><p class="text">𝕊CHOOL PROJECTS</p></a>
-    <a href="starszaki.html">STARSZAKI</a>
-    <a href="innestrony.html">INNE STRONY</a>
-    <a href="php.html">SBD & PBD</a>
-    <b><a href="python.html">PYTHON</a></b>
-    <a href="zdjecia.html">ZDJĘCIA</a>
-    <a href="inne.html">INNE PLIKI</a>
-    <a href="https://jankupczyk.github.io/EE-09/" target="_blank">EE-09</a>
-    <a href="text.txt" target="_blank">INFO</a>
-    <h3><a href="https://github.com/rotkiw285" target="_blank">&#169; rotkiW285</a></h3>
-</div>
-
+<script src="navbar.js"></script>
 <div class="gallery-container">
     <div class="gallery">
     <a target="_blank" href="python/051022.py">
@@ -140,13 +128,6 @@
     <a target="_blank" href="python/txt.py">
     <img src="python/txt.webp" loading="lazy"></a>
     <p>Txt.py</p></div>
-
-
-
-
-
-
-
 </div>
 </body>
 </html>
