fix for signature rounding

--- a/inne.html
+++ b/inne.html
@@ -16,24 +16,24 @@
 <div class="gallery-container">
     <div class="gallery">
     <img src="img/m_obliczenia_pusty.webp" loading="lazy">
-    <p>5 plików exel (informatyka)</p>
-    <p><a href="zip/exele.zip" download>Pobierz</a></p></div>
+    <p>5 plików exel (informatyka)<br>
+    <a href="zip/exele.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <img src="img/egzaminy2023.webp" loading="lazy">
-    <p>Egzaminy styczeń 2023 (Zalecenia)</p>
-    <p><a href="zip/egzaminy2023.zip" download>Pobierz</a></p></div>
+    <p>Egzaminy styczeń 2023 (Zalecenia)<br>
+    <a href="zip/egzaminy2023.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <a target="_blank" href="files/ostatnie_slowa.txt">
     <img src="img/ostatnie-slowa.webp" loading="lazy"></a>
-    <p>Ostatnie słowa</p>
-    <p>‎</p></div>
+    <p>Ostatnie słowa<br>
+    ‎</p></div>
 
     <div class="gallery">
     <img src="img/inf02-23.webp" loading="lazy">
-    <p>Arkusze INF.02 sesja czerwiec 2023</p>
-    <p><a href="zip/inf02-23.zip" download>Pobierz</a></p></div>
+    <p>Arkusze INF.02 sesja czerwiec 2023<br>
+    <a href="zip/inf02-23.zip" download>Pobierz</a></p></div>
 </div>
 </body>
 </html>
