--- a/index.html
+++ b/index.html
@@ -25,146 +25,146 @@
  <div class="gallery">
     <a target="_blank" href="sp/240126/index.html">
     <img src="img/240126.webp" loading="lazy"></a>
-    <p>26.01.24 - [PSI] - Bawiladnia na ocenę</p>
-    <p><a href="zip/240126.zip" download>Pobierz</a></p></div> 
+    <p>26.01.24 - [PSI] - Bawiladnia na ocenę<br>
+    <a href="zip/240126.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/240123/index.html">
     <img src="img/240123.webp" loading="lazy"></a>
-    <p>23.01.24 - [PAI] - Klasy, konstruktory c.d.</p>
-    <p><a href="zip/240123.zip" download>Pobierz</a></p></div> 
+    <p>23.01.24 - [PAI] - Klasy, konstruktory c.d.<br>
+    <a href="zip/240123.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/240102/index.html">
     <img src="img/240102.webp" loading="lazy"></a>
-    <p>02.01.24 - [PAI] - Klasy, konstruktory</p>
-    <p><a href="zip/240102.zip" download>Pobierz</a></p></div> 
+    <p>02.01.24 - [PAI] - Klasy, konstruktory<br>
+    <a href="zip/240102.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231212/index.html">
     <img src="img/231212.webp" loading="lazy"></a>
-    <p>12.12.23 - [PAI] - Odliczanie do dat</p>
-    <p><a href="zip/231212.zip" download>Pobierz</a></p></div> 
+    <p>12.12.23 - [PAI] - Odliczanie do dat<br>
+    <a href="zip/231212.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231205/index.html">
     <img src="img/231205.webp" loading="lazy"></a>
-    <p>05.12.23 - [PAI] - Daty i godziny w JS</p>
-    <p><a href="zip/231205.zip" download>Pobierz</a></p></div> 
+    <p>05.12.23 - [PAI] - Daty i godziny w JS<br>
+    <a href="zip/231205.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <img src="img/231205-wiai.webp" loading="lazy">
-    <p>05.12.23 - [WIAI] - 3 efekty GIMP</p>
-    <p><a href="zip/231205-wiai.zip" download>Pobierz</a></p></div> 
+    <p>05.12.23 - [WIAI] - 3 efekty GIMP<br>
+    <a href="zip/231205-wiai.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231201/index.html">
     <img src="img/231201.webp" loading="lazy"></a>
-    <p>01.12.23 - [PSI] - Kalkulator BMI</p>
-    <p><a href="zip/231201.zip" download>Pobierz</a></p></div> 
+    <p>01.12.23 - [PSI] - Kalkulator BMI<br>
+    <a href="zip/231201.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231128/index.html">
     <img src="img/231128.webp" loading="lazy"></a>
-    <p>28.11.23 - [PAI] Ćwiczenia stringów</p>
-    <p><a href="zip/231128.zip" download>Pobierz</a></p></div> 
+    <p>28.11.23 - [PAI] Ćwiczenia stringów<br>
+    <a href="zip/231128.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231124-psi/index.html">
     <img src="img/231124-psi.webp" loading="lazy"></a>
-    <p>24.11.23 - [PSI] JS Kalkulator i pole kwadratu</p>
-    <p><a href="zip/231124.zip" download>Pobierz</a></p></div> 
+    <p>24.11.23 - [PSI] JS Kalkulator i pole kwadratu<br>
+    <a href="zip/231124.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231110/index.html">
     <img src="img/231110.webp" loading="lazy"></a>
-    <p>10.11.23 - [PSI] Reklamowa animacja CSS</p>
-    <p><a href="zip/231110.zip" download>Pobierz</a></p></div> 
+    <p>10.11.23 - [PSI] Reklamowa animacja CSS<br>
+    <a href="zip/231110.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231107/index.html">
     <img src="img/231107.webp" loading="lazy"></a>
-    <p>07.11.23 - [PAI] 11 Zadań z funkcji</p>
-    <p><a href="zip/231107.zip" download>Pobierz</a></p></div> 
+    <p>07.11.23 - [PAI] 11 Zadań z funkcji<br>
+    <a href="zip/231107.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231024/index.html">
     <img src="img/231024.webp" loading="lazy"></a>
-    <p>24.10.23 - [PAI] Funkcje</p>
-    <p><a href="zip/231024.zip" download>Pobierz</a></p></div> 
+    <p>24.10.23 - [PAI] Funkcje<br>
+    <a href="zip/231024.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231017/index.html">
     <img src="img/231017.webp" loading="lazy"></a>
-    <p>17.10.23 - [PAI] Sprawdzian</p>
-    <p><a href="zip/231017.zip" download>Pobierz</a></p></div> 
-   
+    <p>17.10.23 - [PAI] Sprawdzian<br>
+    <a href="zip/231017.zip" download>Pobierz</a></p></div> 
+
  <div class="gallery">
     <a target="_blank" href="sp/231010/index.html">
     <img src="img/231010.webp" loading="lazy"></a>
-    <p>10.10.23 - [PAI] 3 sposoby sortowania</p>
-    <p><a href="zip/231010.zip" download>Pobierz</a></p></div> 
+    <p>10.10.23 - [PAI] 3 sposoby sortowania<br>
+    <a href="zip/231010.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/231006/index.html">
     <img src="img/231006.webp" loading="lazy"></a>
-    <p>06.10.23 - [PSI] GRID na ocenę</p>
-    <p><a href="zip/231006.zip" download>Pobierz</a></p></div> 
+    <p>06.10.23 - [PSI] GRID na ocenę<br>
+    <a href="zip/231006.zip" download>Pobierz</a></p></div> 
 
 
  <div class="gallery">
     <a target="_blank" href="sp/231003/index.html">
     <img src="img/231003.webp" loading="lazy"></a>
-    <p>03.10.23 - [PAI] Tablice</p>
-    <p><a href="zip/231003.zip" download>Pobierz</a></p></div>  
+    <p>03.10.23 - [PAI] Tablice<br>
+    <a href="zip/231003.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230929/index.html">
     <img src="img/230929.webp" loading="lazy"></a>
-    <p>29.09.23 - [PSI] Flex na ocenę</p>
-    <p><a href="zip/230929.zip" download>Pobierz</a></p></div>  
+    <p>29.09.23 - [PSI] Flex na ocenę<br>
+    <a href="zip/230929.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230926-pai/index.html">
     <img src="img/230926-pai.webp" loading="lazy"></a>
-    <p>26.09.23 - [PAI] Piramidy i inne gówno</p>
-    <p><a href="zip/230926-pai.zip" download>Pobierz</a></p></div>  
+    <p>26.09.23 - [PAI] Piramidy i inne gówno<br>
+    <a href="zip/230926-pai.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230919-pai/index.html">
     <img src="img/230919-pai.webp" loading="lazy"></a>
-    <p>19.09.23 - [PAI] Sumy liczb i silnie</p>
-    <p><a href="zip/230919-pai.zip" download>Pobierz</a></p></div>  
+    <p>19.09.23 - [PAI] Sumy liczb i silnie<br>
+    <a href="zip/230919-pai.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230915-psi/index.html">
     <img src="img/230915-psi.webp" loading="lazy"></a>
-    <p>15.09.23 - [PSI] podstawy HTML replay</p>
+    <p>15.09.23 - [PSI] podstawy HTML replay<br>
     <p><a href="zip/230915-psi.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230912-wiai/index.html">
     <img src="img/230912-wiai.webp" loading="lazy"></a>
-    <p>12.09.23 - [WIAI] Strona responsywna</p>
-    <p><a href="zip/230912-wiai.zip" download>Pobierz</a></p></div>  
+    <p>12.09.23 - [WIAI] Strona responsywna<br>
+    <a href="zip/230912-wiai.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230912/index.html">
     <img src="img/230912.webp" loading="lazy"></a>
-    <p>12.09.23 - [PAI] Pętle while i coś tam</p>
-    <p><a href="zip/230912.zip" download>Pobierz</a></p></div>  
+    <p>12.09.23 - [PAI] Pętle while i coś tam<br>
+    <a href="zip/230912.zip" download>Pobierz</a></p></div>  
  
  <div class="gallery">
     <a target="_blank" href="sp/230907/index.html">
     <img src="img/230907.webp" loading="lazy"></a>
-    <p>07.09.23 - [WIAI] Strona responsywna</p>
-    <p><a href="zip/230907.zip" download>Pobierz</a></p></div>   
+    <p>07.09.23 - [WIAI] Strona responsywna<br>
+    <a href="zip/230907.zip" download>Pobierz</a></p></div>   
 
  <div class="gallery">
     <a target="_blank" href="sp/230905/index.html">
     <img src="img/230905.webp" loading="lazy"></a>
-    <p>05.09.23 - [PAI] Pierwsze kroki w JS</p>
-    <p><a href="zip/230905.zip" download>Pobierz</a></p></div>    
+    <p>05.09.23 - [PAI] Pierwsze kroki w JS<br>
+    <a href="zip/230905.zip" download>Pobierz</a></p></div>    
 
 </div>
 </body>
