Adding a logo & tittle on top of site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
-<script src="navbar.js"></script>
+<div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
+<script src="navbar.js"></script></div>
+
 <div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
