--- a/info.html
+++ b/info.html
@@ -12,6 +12,7 @@
    <link rel="manifest" href="favicon/site.webmanifest">
    </head>
 <body>
+<div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
 <script src="navbar.js"></script>
 
 <p class="information">
