--- a/inne.html
+++ b/inne.html
@@ -12,7 +12,9 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
+<div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
 <script src="navbar.js"></script>
+
 <div class="gallery-container">
     <div class="gallery">
     <img src="img/m_obliczenia_pusty.webp" loading="lazy">
