--- a/php.html
+++ b/php.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="php-table.css">
 </head>
 <body>
+<div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
 <script src="navbar.js"></script>
 
 <div class="table-container">
