--- a/starszaki.html
+++ b/starszaki.html
@@ -12,7 +12,9 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
+<div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
 <script src="navbar.js"></script>
+
 <div class="gallery-container">
  <div class="gallery">
     <a target="_blank" href="sp/230522/index.html">
