introducing better spelling

--- a/innestrony.html
+++ b/innestrony.html
@@ -260,7 +260,7 @@
     <div class="gallery">
     <a target="_blank" href="innestrony/is56/index.html">
     <img src="img/is56.webp" loading="lazy"></a>
-    <p>"Kułko i =" - JS<br>
+    <p>"Kułko i kżyrzyk" - JS<br>
     <a href="zip/is56.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
