i fuckup with that color change

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <a target="_blank" href="sp/230915-psi/index.html">
     <img src="img/230915-psi.webp" loading="lazy"></a>
     <p>15.09.23 - [PSI] podstawy HTML replay<br>
-    <p><a href="zip/230915-psi.zip" download>Pobierz</a></p></div>  
+    <a href="zip/230915-psi.zip" download>Pobierz</a></p></div>  
 
  <div class="gallery">
     <a target="_blank" href="sp/230912-wiai/index.html">
