--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
- <!-- <div class="gallery">
+ <div class="gallery">
     <a target="_blank" href="sp/240227/index.html">
     <img src="img/240227.webp" loading="lazy"></a>
-    <p>27.02.24 - [PAI] - Sprawdzian Klasy i obiekty</p>
-    <p><a href="zip/240227.zip" download>Pobierz</a></p></div>  -->
+    <p>27.02.24 - [PAI] - Sprawdzian Klasy i obiekty<br>
+    <a href="zip/240227.zip" download>Pobierz</a></p></div> 
 
  <div class="gallery">
     <a target="_blank" href="sp/240126/index.html">
