--- a/innestrony.html
+++ b/innestrony.html
@@ -292,6 +292,18 @@
     <img src="img/is59.webp" loading="lazy"></a>
     <p>Animacja perełka<br>
     <a href="zip/is59.zip" download>Pobierz</a></p></div>
+    
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is60/index.html">
+    <img src="img/is60.webp" loading="lazy"></a>
+    <p>Stoper JS<br>
+    <a href="zip/is60.zip" download>Pobierz</a></p></div>
+
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is61/index.html">
+    <img src="img/is61.webp" loading="lazy"></a>
+    <p>Wesołych świąt<br>
+    <a href="zip/is61.zip" download>Pobierz</a></p></div>
 </div>
 </body>
 </html>
