--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
+ <!-- <div class="gallery">
+    <a target="_blank" href="sp/240301/index.html">
+    <img src="img/240301.webp" loading="lazy"></a>
+    <p>01.03.24 - [PSI] - Egzamin (Szablon z <a href="innestrony/is48/Untitled-1.html" style="text-decoration: underline;" target="_blank">IS48</a>)<br>
+    <a href="zip/240301.zip" download>Pobierz</a></p></div>  -->
+
  <div class="gallery">
     <a target="_blank" href="sp/240227/index.html">
     <img src="img/240227.webp" loading="lazy"></a>
