initial template for gallery-container

--- a/index.html
+++ b/index.html
@@ -18,167 +18,60 @@
 <div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
-<div class="gallery">
+<!-- <div class="gallery">
    <a target="_blank" href="sp/240312/index.html">
    <img src="img/240312.webp" loading="lazy"></a>
    <p>12.03.24 - [PAI] - Inputy i live text<br>
-   <a href="sp/240312/index.html" download>Pobierz</a></p></div>
+   <a href="sp/240312/index.html" download>Pobierz</a></p></div> -->
 
- <div class="gallery">
-   <a target="_blank" href="sp/240301/index.html">
-   <img src="img/240301.webp" loading="lazy"></a>
-   <p>01.03.24 - [PSI] - Egzamin (Szablon z <a href="innestrony/is48/Untitled-1.html" style="text-decoration: underline;" target="_blank">IS48</a>)<br>
-   <a href="zip/240301.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gbar">
+      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
+      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+   </div>
+</div>
 
- <div class="gallery">
-    <a target="_blank" href="sp/240227/index.html">
-    <img src="img/240227.webp" loading="lazy"></a>
-    <p>27.02.24 - [PAI] - Sprawdzian Klasy i obiekty<br>
-    <a href="zip/240227.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gbar">
+      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
+      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+   </div>
+</div>
 
- <div class="gallery">
-    <a target="_blank" href="sp/240126/index.html">
-    <img src="img/240126.webp" loading="lazy"></a>
-    <p>26.01.24 - [PSI] - Bawiladnia na ocenę<br>
-    <a href="zip/240126.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gbar">
+      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
+      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+   </div>
+</div>
 
- <div class="gallery">
-    <a target="_blank" href="sp/240123/index.html">
-    <img src="img/240123.webp" loading="lazy"></a>
-    <p>23.01.24 - [PAI] - Klasy, konstruktory c.d.<br>
-    <a href="zip/240123.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gbar">
+      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
+      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+   </div>
+</div>
 
- <div class="gallery">
-    <a target="_blank" href="sp/240102/index.html">
-    <img src="img/240102.webp" loading="lazy"></a>
-    <p>02.01.24 - [PAI] - Klasy, konstruktory<br>
-    <a href="zip/240102.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gbar">
+      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
+      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+   </div>
+</div>
 
- <div class="gallery">
-    <a target="_blank" href="sp/231212/index.html">
-    <img src="img/231212.webp" loading="lazy"></a>
-    <p>12.12.23 - [PAI] - Odliczanie do dat<br>
-    <a href="zip/231212.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gbar">
+      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
+      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+   </div>
+</div>
 
- <div class="gallery">
-    <a target="_blank" href="sp/231205/index.html">
-    <img src="img/231205.webp" loading="lazy"></a>
-    <p>05.12.23 - [PAI] - Daty i godziny w JS<br>
-    <a href="zip/231205.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <img src="img/231205-wiai.webp" loading="lazy">
-    <p>05.12.23 - [WIAI] - 3 efekty GIMP<br>
-    <a href="zip/231205-wiai.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231201/index.html">
-    <img src="img/231201.webp" loading="lazy"></a>
-    <p>01.12.23 - [PSI] - Kalkulator BMI<br>
-    <a href="zip/231201.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231128/index.html">
-    <img src="img/231128.webp" loading="lazy"></a>
-    <p>28.11.23 - [PAI] Ćwiczenia stringów<br>
-    <a href="zip/231128.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231124-psi/index.html">
-    <img src="img/231124-psi.webp" loading="lazy"></a>
-    <p>24.11.23 - [PSI] JS Kalkulator i pole kwadratu<br>
-    <a href="zip/231124.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231110/index.html">
-    <img src="img/231110.webp" loading="lazy"></a>
-    <p>10.11.23 - [PSI] Reklamowa animacja CSS<br>
-    <a href="zip/231110.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231107/index.html">
-    <img src="img/231107.webp" loading="lazy"></a>
-    <p>07.11.23 - [PAI] 11 Zadań z funkcji<br>
-    <a href="zip/231107.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231024/index.html">
-    <img src="img/231024.webp" loading="lazy"></a>
-    <p>24.10.23 - [PAI] Funkcje<br>
-    <a href="zip/231024.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231017/index.html">
-    <img src="img/231017.webp" loading="lazy"></a>
-    <p>17.10.23 - [PAI] Sprawdzian<br>
-    <a href="zip/231017.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231010/index.html">
-    <img src="img/231010.webp" loading="lazy"></a>
-    <p>10.10.23 - [PAI] 3 sposoby sortowania<br>
-    <a href="zip/231010.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/231006/index.html">
-    <img src="img/231006.webp" loading="lazy"></a>
-    <p>06.10.23 - [PSI] GRID na ocenę<br>
-    <a href="zip/231006.zip" download>Pobierz</a></p></div>
-
-
- <div class="gallery">
-    <a target="_blank" href="sp/231003/index.html">
-    <img src="img/231003.webp" loading="lazy"></a>
-    <p>03.10.23 - [PAI] Tablice<br>
-    <a href="zip/231003.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230929/index.html">
-    <img src="img/230929.webp" loading="lazy"></a>
-    <p>29.09.23 - [PSI] Flex na ocenę<br>
-    <a href="zip/230929.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230926-pai/index.html">
-    <img src="img/230926-pai.webp" loading="lazy"></a>
-    <p>26.09.23 - [PAI] Piramidy i inne gówno<br>
-    <a href="zip/230926-pai.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230919-pai/index.html">
-    <img src="img/230919-pai.webp" loading="lazy"></a>
-    <p>19.09.23 - [PAI] Sumy liczb i silnie<br>
-    <a href="zip/230919-pai.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230915-psi/index.html">
-    <img src="img/230915-psi.webp" loading="lazy"></a>
-    <p>15.09.23 - [PSI] podstawy HTML replay<br>
-    <a href="zip/230915-psi.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230912-wiai/index.html">
-    <img src="img/230912-wiai.webp" loading="lazy"></a>
-    <p>12.09.23 - [WIAI] Strona responsywna<br>
-    <a href="zip/230912-wiai.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230912/index.html">
-    <img src="img/230912.webp" loading="lazy"></a>
-    <p>12.09.23 - [PAI] Pętle while i coś tam<br>
-    <a href="zip/230912.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230907/index.html">
-    <img src="img/230907.webp" loading="lazy"></a>
-    <p>07.09.23 - [WIAI] Strona responsywna<br>
-    <a href="zip/230907.zip" download>Pobierz</a></p></div>
-
- <div class="gallery">
-    <a target="_blank" href="sp/230905/index.html">
-    <img src="img/230905.webp" loading="lazy"></a>
-    <p>05.09.23 - [PAI] Pierwsze kroki w JS<br>
-    <a href="zip/230905.zip" download>Pobierz</a></p></div>
 
 </div>
 </body>
