--- a/index.html
+++ b/index.html
@@ -18,60 +18,275 @@
 <div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
 
-<!-- <div class="gallery">
-   <a target="_blank" href="sp/240312/index.html">
-   <img src="img/240312.webp" loading="lazy"></a>
-   <p>12.03.24 - [PAI] - Inputy i live text<br>
-   <a href="sp/240312/index.html" download>Pobierz</a></p></div> -->
-
 <div class="gallery">
-   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gimg">
+      <a href="sp/240312/index.html" target="_blank"> <img src="img/240312.webp"></a>
+      </div>
    <div class="gbar">
-      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
-      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+      <div class="gtext">12.03.24 - [PAI] - Inputy i live text</div>
+      <div class="gbtn"><a href="zip/240312.zip">Pobierz</a></div>
    </div>
 </div>
 
 <div class="gallery">
-   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gimg">
+      <a href="sp/240301/index.html" target="_blank"> <img src="img/240301.webp"></a>
+      </div>
    <div class="gbar">
-      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
-      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+      <div class="gtext">01.03.24 - [PSI] - Egzamin (Szablon z <a href="innestrony/is48/Untitled-1.html" style="text-decoration: underline;" target="_blank">IS48</a>)</div>
+      <div class="gbtn"><a href="zip/240301.zip">Pobierz</a></div>
    </div>
 </div>
 
 <div class="gallery">
-   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gimg">
+      <a href="sp/240227/index.html" target="_blank"> <img src="img/240227.webp"></a>
+      </div>
    <div class="gbar">
-      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
-      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+      <div class="gtext">27.02.24 - [PAI] - Sprawdzian Klasy</div>
+      <div class="gbtn"><a href="zip/240227.zip">Pobierz</a></div>
    </div>
 </div>
 
 <div class="gallery">
-   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gimg">
+      <a href="sp/240126/index.html" target="_blank"> <img src="img/240126.webp"></a>
+      </div>
    <div class="gbar">
-      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
-      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+      <div class="gtext">26.01.24 - [PSI] - Bawiladnia</div>
+      <div class="gbtn"><a href="zip/240126.zip">Pobierz</a></div>
    </div>
 </div>
 
 <div class="gallery">
-   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gimg">
+      <a href="sp/240123/index.html" target="_blank"> <img src="img/240123.webp"></a>
+      </div>
    <div class="gbar">
-      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
-      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+      <div class="gtext">23.01.24 - [PAI] - Klasy, konstruktory c.d.</div>
+      <div class="gbtn"><a href="zip/240123.zip">Pobierz</a></div>
    </div>
 </div>
 
 <div class="gallery">
-   <div class="gimg"><img src="img/test.webp"></div>
+   <div class="gimg">
+      <a href="sp/240102/index.html" target="_blank"> <img src="img/240102.webp"></a>
+      </div>
    <div class="gbar">
-      <div class="gtext">12.03.2024 - [PAI] Stary lezy najebany</div>
-      <div class="gbtn"><a href="zip/220412.zip">Pobierz</a></div>
+      <div class="gtext">02.01.24 - [PAI] - Klasy, konstruktory</div>
+      <div class="gbtn"><a href="zip/240102.zip">Pobierz</a></div>
    </div>
 </div>
 
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231212/index.html" target="_blank"> <img src="img/231212.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">12.12.23 - [PAI] - Odliczanie do dat</div>
+      <div class="gbtn"><a href="zip/231212.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231205/index.html" target="_blank"> <img src="img/231205.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">05.12.23 - [PAI] - Daty i godziny w JS</div>
+      <div class="gbtn"><a href="zip/231205.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <img src="img/231205-wiai.webp">
+      </div>
+   <div class="gbar">
+      <div class="gtext">05.12.23 - [WIAI] - 3 efekty GIMP</div>
+      <div class="gbtn"><a href="zip/231205-wiai.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231201/index.html" target="_blank"> <img src="img/231201.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">01.12.23 - [PSI] - Kalkulator BMI</div>
+      <div class="gbtn"><a href="zip/231201.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231128/index.html" target="_blank"> <img src="img/231128.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">28.11.23 - [PAI] Ćwiczenia stringów</div>
+      <div class="gbtn"><a href="zip/231128.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231124/index.html" target="_blank"> <img src="img/231124.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">24.11.23 - [PSI] JS Calc i pole kwadratu</div>
+      <div class="gbtn"><a href="zip/231124.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231110/index.html" target="_blank"> <img src="img/231110.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">10.11.23 - [PSI] Reklamowa animacja</div>
+      <div class="gbtn"><a href="zip/231110.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231107/index.html" target="_blank"> <img src="img/231107.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">07.11.23 - [PAI] 11 Zadań z funkcji</div>
+      <div class="gbtn"><a href="zip/231107.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231024/index.html" target="_blank"> <img src="img/231024.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">24.10.23 - [PAI] Funkcje</div>
+      <div class="gbtn"><a href="zip/231024.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231017/index.html" target="_blank"> <img src="img/231017.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">17.10.23 - [PAI] Sprawdzian</div>
+      <div class="gbtn"><a href="zip/231017.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231010/index.html" target="_blank"> <img src="img/231010.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">10.10.23 - [PAI] 3 sposoby sortowania</div>
+      <div class="gbtn"><a href="zip/231010.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231006/index.html" target="_blank"> <img src="img/231006.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">06.10.23 - [PSI] GRID na ocenę</div>
+      <div class="gbtn"><a href="zip/231006.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/231003/index.html" target="_blank"> <img src="img/231003.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">03.10.23 - [PAI] Tablice</div>
+      <div class="gbtn"><a href="zip/231003.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230929/index.html" target="_blank"> <img src="img/230929.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">29.09.23 - [PSI] Flex na ocenę</div>
+      <div class="gbtn"><a href="zip/230929.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230926-pai/index.html" target="_blank"> <img src="img/230926-pai.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">26.09.23 - [PAI] Piramidy i inne gówno</div>
+      <div class="gbtn"><a href="zip/230926-pai.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230919-pai/index.html" target="_blank"> <img src="img/230919-pai.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">19.09.23 - [PAI] Sumy liczb i silnie</div>
+      <div class="gbtn"><a href="zip/230919-pai.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230915-psi/index.html" target="_blank"> <img src="img/230915-psi.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">15.09.23 - [PSI] podstawy HTML replay</div>
+      <div class="gbtn"><a href="zip/230915-psi.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230912-wiai/index.html" target="_blank"> <img src="img/230912-wiai.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">12.09.23 - [WIAI] Strona responsywna</div>
+      <div class="gbtn"><a href="zip/230912-wiai.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230912/index.html" target="_blank"> <img src="img/230912.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">12.09.23 - [PAI] Pętle while i coś tam</div>
+      <div class="gbtn"><a href="zip/230912.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230907/index.html" target="_blank"> <img src="img/230907.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">07.09.23 - [WIAI] Strona responsywna</div>
+      <div class="gbtn"><a href="zip/230907.zip">Pobierz</a></div>
+   </div>
+</div>
+
+<div class="gallery">
+   <div class="gimg">
+      <a href="sp/230905/index.html" target="_blank"> <img src="img/230905.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">05.09.23 - [PAI] Pierwsze kroki w JS</div>
+      <div class="gbtn"><a href="zip/230905.zip">Pobierz</a></div>
+   </div>
+</div>
 
 </div>
 </body>
