--- a/inne.html
+++ b/inne.html
@@ -16,26 +16,47 @@
 <script src="navbar.js"></script>
 
 <div class="gallery-container">
-    <div class="gallery">
-    <img src="img/m_obliczenia_pusty.webp" loading="lazy">
-    <p>5 plików exel (informatyka)<br>
-    <a href="zip/exele.zip" download>Pobierz</a></p></div>
 
-    <div class="gallery">
-    <img src="img/egzaminy2023.webp" loading="lazy">
-    <p>Egzaminy styczeń 2023 (Zalecenia)<br>
-    <a href="zip/egzaminy2023.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+    <div class="gimg">
+       <img src="img/m_obliczenia_pusty.webp">
+       </div>
+    <div class="gbar">
+       <div class="gtext">5 plików exel (informatyka)</div>
+       <div class="gbtn"><a href="zip/exele.zip">Pobierz</a></div>
+    </div>
+ </div>
 
-    <div class="gallery">
-    <a target="_blank" href="files/ostatnie_slowa.txt">
-    <img src="img/ostatnie-slowa.webp" loading="lazy"></a>
-    <p>Ostatnie słowa<br>
-    ‎</p></div>
+<div class="gallery">
+    <div class="gimg">
+       <img src="img/egzaminy2023.webp">
+       </div>
+    <div class="gbar">
+       <div class="gtext">Egzaminy styczeń 2023 (Zalecenia)</div>
+       <div class="gbtn"><a href="zip/egzaminy2023.zip">Pobierz</a></div>
+    </div>
+ </div>
 
-    <div class="gallery">
-    <img src="img/inf02-23.webp" loading="lazy">
-    <p>Arkusze INF.02 sesja czerwiec 2023<br>
-    <a href="zip/inf02-23.zip" download>Pobierz</a></p></div>
+<div class="gallery">
+    <div class="gimg">
+       <img src="img/ostatnie-slowa.webp">
+       </div>
+    <div class="gbar">
+       <div class="gtext">Ostatnie słowa</div>
+       <div class="gbtn"><a href="files/ostatnie_slowa.txt" target="_blank">Pobierz</a></div>
+    </div>
+    </div>
+
+<div class="gallery">
+    <div class="gimg">
+       <img src="img/inf02-23.webp"></a>
+       </div>
+    <div class="gbar">
+       <div class="gtext">Arkusze INF.02 sesja czerwiec 2023</div>
+       <div class="gbtn"><a href="zip/inf02-23.zip">Pobierz</a></div>
+    </div>
+ </div>
+
 </div>
 </body>
 </html>
