--- a/python.html
+++ b/python.html
@@ -10,6 +10,31 @@
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 <link rel="manifest" href="favicon/site.webmanifest">
+<style>
+    .gallery {
+    margin: 5px;
+    width: 370px;
+}
+
+.gallery img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+}
+
+.gallery p{
+    margin-top: 0;
+    text-align: center;
+    width: 100%;
+    color: #dfdfdf;
+    background-color: #161624;
+    border-radius: 8px;
+}
+
+.gallery p a{
+    text-decoration: none;
+}
+</style>
 </head>
 <body>
 <div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
