minor index.html changes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
 <script src="navbar.js"></script></div>
 
-<div class="gallery-container">
 <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
+
+<div class="gallery-container">
 
 <div class="gallery">
    <div class="gimg">
@@ -33,7 +34,7 @@
       <a href="sp/240301/index.html" target="_blank"> <img src="img/240301.webp"></a>
       </div>
    <div class="gbar">
-      <div class="gtext">01.03.24 - [PSI] - Egzamin (Szablon z <a href="innestrony/is48/Untitled-1.html" style="text-decoration: underline;" target="_blank">IS48</a>)</div>
+      <div class="gtext">01.03.24 - [PSI] - Egzamin (Szablon <a href="innestrony/is48/Untitled-1.html" style="text-decoration: underline;" target="_blank">IS48</a>)</div>
       <div class="gbtn"><a href="zip/240301.zip">Pobierz</a></div>
    </div>
 </div>
@@ -43,7 +44,7 @@
       <a href="sp/240227/index.html" target="_blank"> <img src="img/240227.webp"></a>
       </div>
    <div class="gbar">
-      <div class="gtext">27.02.24 - [PAI] - Sprawdzian Klasy</div>
+      <div class="gtext">27.02.24 - [PAI] - Sprawdzian klasy i obiekty</div>
       <div class="gbtn"><a href="zip/240227.zip">Pobierz</a></div>
    </div>
 </div>
