add missing links in starszaki.html

--- a/starszaki.html
+++ b/starszaki.html
@@ -110,6 +110,16 @@
 
  <div class="gallery">
    <div class="gimg">
+      <a href="sp/230131/andrzej.html" target="_blank"> <img src="img/230131-2.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">31.01.23 - Andrzej</div>
+      <div class="gbtn"><a href="zip/230131.zip">Pobierz</a></div>
+   </div>
+</div>
+
+ <div class="gallery">
+   <div class="gimg">
       <a href="sp/230102/index.html" target="_blank"> <img src="img/230102.webp"></a>
       </div>
    <div class="gbar">
@@ -160,6 +170,16 @@
 
  <div class="gallery">
    <div class="gimg">
+      <a href="sp/221123/nikolka.html" target="_blank"> <img src="img/221123-2.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">23.11.22 - pani N (najlepsza animacja)</div>
+      <div class="gbtn"><a href="zip/221123.zip">Pobierz</a></div>
+   </div>
+</div>
+
+ <div class="gallery">
+   <div class="gimg">
       <a href="sp/221121/index.html" target="_blank"> <img src="img/221121.webp"></a>
       </div>
    <div class="gbar">
@@ -200,7 +220,27 @@
 
  <div class="gallery">
    <div class="gimg">
+      <a href="sp/221107/lista.html" target="_blank"> <img src="img/221107-2.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">07.11.22 - Druga lista</div>
+      <div class="gbtn"><a href="zip/221107.zip">Pobierz</a></div>
+   </div>
+</div>
+
+ <div class="gallery">
+   <div class="gimg">
       <a href="sp/221106/index.html" target="_blank"> <img src="img/221106.webp"></a>
+      </div>
+   <div class="gbar">
+      <div class="gtext">06.11.22</div>
+      <div class="gbtn"><a href="zip/221106.zip">Pobierz</a></div>
+   </div>
+</div>
+
+ <div class="gallery">
+   <div class="gimg">
+      <a href="sp/221106/listywiai.html" target="_blank"> <img src="img/221106-2.webp"></a>
       </div>
    <div class="gbar">
       <div class="gtext">06.11.22</div>
