--- a/inne.html
+++ b/inne.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INNE PLIKI - SCHOOL PROJECTS</title>
     <link rel="stylesheet" href="style.css">
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
+
 <body>
-<div class="logo"> <img src="/favicon/logo.png" alt="logo"> <p>SCHOOL PROJECTS</p></div>
-<script src="navbar.js"></script>
-
-<div class="gallery-container">
-
-<div class="gallery">
-    <div class="gimg">
-       <img src="img/m_obliczenia_pusty.webp">
-       </div>
-    <div class="gbar">
-       <div class="gtext">5 plików exel (informatyka)</div>
-       <div class="gbtn"><a href="zip/exele.zip">Pobierz</a></div>
+    <div class="logo"> <img src="/favicon/logo.png" alt="logo">
+        <p>SCHOOL PROJECTS</p>
     </div>
- </div>
+    <script src="navbar.js"></script>
 
-<div class="gallery">
-    <div class="gimg">
-       <img src="img/egzaminy2023.webp">
-       </div>
-    <div class="gbar">
-       <div class="gtext">Egzaminy styczeń 2023 (Zalecenia)</div>
-       <div class="gbtn"><a href="zip/egzaminy2023.zip">Pobierz</a></div>
-    </div>
- </div>
+    <div class="gallery-container">
 
-<div class="gallery">
-    <div class="gimg">
-       <img src="img/ostatnie-slowa.webp">
-       </div>
-    <div class="gbar">
-       <div class="gtext">Ostatnie słowa</div>
-       <div class="gbtn"><a href="files/ostatnie_slowa.txt" target="_blank">Pobierz</a></div>
-    </div>
-    </div>
+        <div class="gallery">
+            <div class="gimg">
+                <img src="img/m_obliczenia_pusty.webp">
+            </div>
+            <div class="gbar">
+                <div class="gtext">5 plików exel (informatyka)</div>
+                <div class="gbtn"><a href="zip/exele.zip">Pobierz</a></div>
+            </div>
+        </div>
 
-<div class="gallery">
-    <div class="gimg">
-       <img src="img/inf02-23.webp"></a>
-       </div>
-    <div class="gbar">
-       <div class="gtext">Arkusze INF.02 sesja czerwiec 2023</div>
-       <div class="gbtn"><a href="zip/inf02-23.zip">Pobierz</a></div>
-    </div>
- </div>
+        <div class="gallery">
+            <div class="gimg">
+                <img src="img/egzaminy2023.webp">
+            </div>
+            <div class="gbar">
+                <div class="gtext">Egzaminy styczeń 2023 (Zalecenia)</div>
+                <div class="gbtn"><a href="zip/egzaminy2023.zip">Pobierz</a></div>
+            </div>
+        </div>
 
-</div>
+        <div class="gallery">
+            <div class="gimg">
+                <img src="img/ostatnie-slowa.webp">
+            </div>
+            <div class="gbar">
+                <div class="gtext">Ostatnie słowa</div>
+                <div class="gbtn"><a href="files/ostatnie_slowa.txt" target="_blank">Pobierz</a></div>
+            </div>
+        </div>
+
+        <div class="gallery">
+            <div class="gimg">
+                <img src="img/inf02-23.webp"></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">Arkusze INF.02 sesja czerwiec 2023</div>
+                <div class="gbtn"><a href="zip/inf02-23.zip">Pobierz</a></div>
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
