add missing download attribute

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">12.03.24 - [PAI] - Inputy i live text</div>
-                <div class="gbtn"><a href="zip/240312.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/240312.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -41,7 +41,7 @@
             <div class="gbar">
                 <div class="gtext">01.03.24 - [PSI] - Egzamin (Szablon <a href="innestrony/is48/Untitled-1.html"
                         style="text-decoration: underline;" target="_blank">IS48</a>)</div>
-                <div class="gbtn"><a href="zip/240301.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/240301.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">27.02.24 - [PAI] - Sprawdzian klasy i obiekty</div>
-                <div class="gbtn"><a href="zip/240227.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/240227.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -61,7 +61,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">26.01.24 - [PSI] - Bawiladnia</div>
-                <div class="gbtn"><a href="zip/240126.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/240126.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -71,7 +71,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">23.01.24 - [PAI] - Klasy, konstruktory c.d.</div>
-                <div class="gbtn"><a href="zip/240123.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/240123.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">02.01.24 - [PAI] - Klasy, konstruktory</div>
-                <div class="gbtn"><a href="zip/240102.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/240102.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -91,7 +91,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">12.12.23 - [PAI] - Odliczanie do dat</div>
-                <div class="gbtn"><a href="zip/231212.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231212.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -101,7 +101,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">05.12.23 - [PAI] - Daty i godziny w JS</div>
-                <div class="gbtn"><a href="zip/231205.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231205.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -111,7 +111,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">05.12.23 - [WIAI] - 3 efekty GIMP</div>
-                <div class="gbtn"><a href="zip/231205-wiai.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231205-wiai.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -121,7 +121,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">01.12.23 - [PSI] - Kalkulator BMI</div>
-                <div class="gbtn"><a href="zip/231201.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231201.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -131,7 +131,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">28.11.23 - [PAI] Ćwiczenia stringów</div>
-                <div class="gbtn"><a href="zip/231128.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231128.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -141,7 +141,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">24.11.23 - [PSI] JS Calc i pole kwadratu</div>
-                <div class="gbtn"><a href="zip/231124.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231124.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -151,7 +151,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">10.11.23 - [PSI] Reklamowa animacja</div>
-                <div class="gbtn"><a href="zip/231110.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231110.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -161,7 +161,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">07.11.23 - [PAI] 11 Zadań z funkcji</div>
-                <div class="gbtn"><a href="zip/231107.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231107.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -171,7 +171,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">24.10.23 - [PAI] Funkcje</div>
-                <div class="gbtn"><a href="zip/231024.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231024.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -181,7 +181,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">17.10.23 - [PAI] Sprawdzian</div>
-                <div class="gbtn"><a href="zip/231017.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231017.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -191,7 +191,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">10.10.23 - [PAI] 3 sposoby sortowania</div>
-                <div class="gbtn"><a href="zip/231010.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231010.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -201,7 +201,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">06.10.23 - [PSI] GRID na ocenę</div>
-                <div class="gbtn"><a href="zip/231006.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231006.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -211,7 +211,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">03.10.23 - [PAI] Tablice</div>
-                <div class="gbtn"><a href="zip/231003.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/231003.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -221,7 +221,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">29.09.23 - [PSI] Flex na ocenę</div>
-                <div class="gbtn"><a href="zip/230929.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230929.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -231,7 +231,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">26.09.23 - [PAI] Piramidy i inne gówno</div>
-                <div class="gbtn"><a href="zip/230926-pai.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230926-pai.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -241,7 +241,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">19.09.23 - [PAI] Sumy liczb i silnie</div>
-                <div class="gbtn"><a href="zip/230919-pai.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230919-pai.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -251,7 +251,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">15.09.23 - [PSI] podstawy HTML replay</div>
-                <div class="gbtn"><a href="zip/230915-psi.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230915-psi.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -261,7 +261,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">12.09.23 - [WIAI] Strona responsywna</div>
-                <div class="gbtn"><a href="zip/230912-wiai.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230912-wiai.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -271,7 +271,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">12.09.23 - [PAI] Pętle while i coś tam</div>
-                <div class="gbtn"><a href="zip/230912.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230912.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -281,7 +281,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">07.09.23 - [WIAI] Strona responsywna</div>
-                <div class="gbtn"><a href="zip/230907.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230907.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -291,7 +291,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">05.09.23 - [PAI] Pierwsze kroki w JS</div>
-                <div class="gbtn"><a href="zip/230905.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/230905.zip" download>Pobierz</a></div>
             </div>
         </div>
 
