--- a/inne.html
+++ b/inne.html
@@ -27,7 +27,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">5 plików exel (informatyka)</div>
-                <div class="gbtn"><a href="zip/exele.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/exele.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">Egzaminy styczeń 2023 (Zalecenia)</div>
-                <div class="gbtn"><a href="zip/egzaminy2023.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/egzaminy2023.zip" download>Pobierz</a></div>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
             </div>
             <div class="gbar">
                 <div class="gtext">Arkusze INF.02 sesja czerwiec 2023</div>
-                <div class="gbtn"><a href="zip/inf02-23.zip">Pobierz</a></div>
+                <div class="gbtn"><a href="zip/inf02-23.zip" download>Pobierz</a></div>
             </div>
         </div>
 
